--- a/core/templates/core/components/template_detail_grid.html
+++ b/core/templates/core/components/template_detail_grid.html
@@ -38,20 +38,22 @@
                     </td>
                     <td class="px-2 py-1 text-xs text-gray-900">
                         <div class="flex items-center space-x-1">
-                            <a href="{% url 'core:template_detail_update' detail.TemplateDetailId %}" 
-                               class="text-blue-600 hover:text-blue-900 p-1 rounded hover:bg-blue-50" 
-                               title="Edit Detail">
+                            <button type="button"
+                                    class="edit-template-detail-btn text-blue-600 hover:text-blue-900 p-1 rounded hover:bg-blue-50" 
+                                    data-template-detail-id="{{ detail.TemplateDetailId }}"
+                                    title="Edit Detail">
                                 <svg class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
                                 </svg>
-                            </a>
-                            <a href="{% url 'core:template_detail_delete' detail.TemplateDetailId %}" 
-                               class="text-red-600 hover:text-red-900 p-1 rounded hover:bg-red-50" 
-                               title="Delete Detail">
+                            </button>
+                            <button type="button"
+                                    class="delete-template-detail-btn text-red-600 hover:text-red-900 p-1 rounded hover:bg-red-50" 
+                                    data-template-detail-id="{{ detail.TemplateDetailId }}"
+                                    title="Delete Detail">
                                 <svg class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
                                 </svg>
-                            </a>
+                            </button>
                         </div>
                     </td>
                 </tr>
