--- a/core/templates/core/refasset_depreciation_account_list.html
+++ b/core/templates/core/refasset_depreciation_account_list.html
@@ -16,7 +16,7 @@
 
     <div class="flex justify-between items-center py-1 lg:px-6 bg-white border-b border-gray-200">
         <div>
-            <h1 class="text-base lg:text-lg xl:text-xl font-medium text-gray-900">ЭЛЭГДЛИЙН ДАНСНЫ МОДУЛЬ</h1>
+            <h1 class="text-base lg:text-lg xl:text-xl font-medium text-gray-900">ЭЛЭГДЭЛТЭЙ ХОЛБООТОЙ ДАНСНЫ ТОХИРУУЛГА </h1>
         </div>
         <a href="{% url 'core:ref_asset_depreciation_account_create' %}" class="inline-flex items-center px-2 py-1 lg:px-3 lg:py-1.5 bg-blue-500 text-white text-xs font-medium rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
             <svg class="mr-1 lg:mr-1.5 h-3 w-3 lg:h-4 lg:w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
